<resources>
    <string name="app_name">BOSS直聘自动投递</string>
    <string name="accessibility_service_description">此服务用于自动在BOSS直聘上投递简历，需要开启无障碍服务权限</string>
    <string name="start_service">开始投递</string>
    <string name="stop_service">停止投递</string>
    <string name="service_status">服务状态：未启动</string>
    <string name="open_accessibility_settings">打开无障碍设置</string>
    <string name="app_version">1.1.0.250305</string>
    <string name="version_info">当前版本：%s</string>
</resources>